--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -7648,6 +7648,9 @@ after time</property>
                                                             <child>
                                                             <placeholder/>
                                                             </child>
+                                                            <child>
+                                                            <placeholder/>
+                                                            </child>
                                                             </widget>
                                                             </child>
                                                             <child>
@@ -9050,6 +9053,9 @@ after time</property>
                                                             <child>
                                                             <placeholder/>
                                                             </child>
+                                                            <child>
+                                                            <placeholder/>
+                                                            </child>
                                                             </widget>
                                                             <packing>
                                                             <property name="position">2</property>
@@ -9531,6 +9537,9 @@ after time</property>
                                                             <property name="x_options">GTK_FILL</property>
                                                             <property name="y_options">GTK_FILL</property>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
@@ -15571,16 +15580,21 @@ on current Chronojump version.</property>
                                                     <property name="can_focus">True</property>
                                                     <property name="position">400</property>
                                                     <child>
-                                                      <widget class="GtkVPaned" id="vpaned3">
+                                                      <widget class="GtkVPaned" id="vpaned_encoder_main">
                                                         <property name="visible">True</property>
                                                         <property name="can_focus">True</property>
                                                         <property name="position">200</property>
                                                         <child>
-                                                          <widget class="GtkAlignment" id="alignment36">
-                                                            <property name="height_request">150</property>
+                                                          <widget class="GtkAlignment" id="alignment_encoder_capture_curves_bars_drawingarea">
+                                                            <property name="height_request">170</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="border_width">4</property>
+                                                            <child>
+                                                            <widget class="GtkVBox" id="vbox41">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">False</property>
+                                                            <property name="spacing">10</property>
                                                             <child>
                                                             <widget class="GtkDrawingArea" id="encoder_capture_curves_bars_drawingarea">
                                                             <property name="visible">True</property>
@@ -15588,23 +15602,12 @@ on current Chronojump version.</property>
                                                             <signal name="configure_event" handler="on_encoder_capture_curves_bars_drawingarea_configure_event" swapped="no"/>
                                                             <signal name="expose_event" handler="on_encoder_capture_curves_bars_drawingarea_expose_event" swapped="no"/>
                                                             </widget>
+                                                            <packing>
+                                                            <property name="expand">True</property>
+                                                            <property name="fill">True</property>
+                                                            <property name="position">0</property>
+                                                            </packing>
                                                             </child>
-                                                          </widget>
-                                                          <packing>
-                                                            <property name="resize">True</property>
-                                                            <property name="shrink">False</property>
-                                                          </packing>
-                                                        </child>
-                                                        <child>
-                                                          <widget class="GtkAlignment" id="alignment19">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="border_width">4</property>
-                                                            <child>
-                                                            <widget class="GtkVBox" id="vbox8">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="spacing">2</property>
                                                             <child>
                                                             <widget class="GtkHBox" id="hbox156">
                                                             <property name="visible">True</property>
@@ -15632,7 +15635,7 @@ on current Chronojump version.</property>
                                                             <widget class="GtkHBox" id="hbox_encoder_capture_curves_save_all_none">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="spacing">8</property>
+                                                            <property name="spacing">16</property>
                                                             <child>
                                                             <widget class="GtkLabel" id="label108">
                                                             <property name="visible">True</property>
@@ -15718,11 +15721,26 @@ on current Chronojump version.</property>
                                                             <packing>
                                                             <property name="expand">False</property>
                                                             <property name="fill">False</property>
-                                                            <property name="position">0</property>
+                                                            <property name="position">1</property>
                                                             </packing>
                                                             </child>
+                                                            </widget>
+                                                            </child>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="resize">True</property>
+                                                            <property name="shrink">False</property>
+                                                          </packing>
+                                                        </child>
+                                                        <child>
+                                                          <widget class="GtkAlignment" id="alignment_treeview_encoder_capture_curves">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">False</property>
+                                                            <property name="border_width">4</property>
                                                             <child>
-                                                            <widget class="GtkVBox" id="vbox41">
+                                                            <widget class="GtkVBox" id="vbox_treview_encoder_capture_curves">
+                                                            <property name="width_request">200</property>
+                                                            <property name="height_request">145</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="spacing">2</property>
@@ -15733,8 +15751,6 @@ on current Chronojump version.</property>
                                                             <property name="spacing">4</property>
                                                             <child>
                                                             <widget class="GtkScrolledWindow" id="scrolledwindow2">
-                                                            <property name="width_request">200</property>
-                                                            <property name="height_request">165</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="hscrollbar_policy">automatic</property>
@@ -15763,13 +15779,6 @@ on current Chronojump version.</property>
                                                             </packing>
                                                             </child>
                                                             </widget>
-                                                            <packing>
-                                                            <property name="expand">True</property>
-                                                            <property name="fill">True</property>
-                                                            <property name="position">1</property>
-                                                            </packing>
-                                                            </child>
-                                                            </widget>
                                                             </child>
                                                           </widget>
                                                           <packing>
@@ -15784,7 +15793,7 @@ on current Chronojump version.</property>
                                                       </packing>
                                                     </child>
                                                     <child>
-                                                      <widget class="GtkVPaned" id="vpaned2">
+                                                      <widget class="GtkVPaned" id="vpaned_encoder_capture_video_and_set_graph">
                                                         <property name="visible">True</property>
                                                         <property name="can_focus">True</property>
                                                         <property name="position">200</property>
@@ -21653,6 +21662,9 @@ by you</property>
                         <child>
                           <placeholder/>
                         </child>
+                        <child>
+                          <placeholder/>
+                        </child>
                       </widget>
                     </child>
                   </widget>
@@ -22042,6 +22054,9 @@ by you</property>
                             <property name="x_options">GTK_FILL</property>
                             <property name="y_options"/>
                           </packing>
+                        </child>
+                        <child>
+                          <placeholder/>
                         </child>
                         <child>
                           <placeholder/>
@@ -24029,6 +24044,9 @@ by you</property>
               <placeholder/>
             </child>
             <child>
+              <placeholder/>
+            </child>
+            <child>
               <widget class="GtkButton" id="button_video_url">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -24051,6 +24069,9 @@ by you</property>
                 <property name="x_options"/>
                 <property name="y_options"/>
               </packing>
+            </child>
+            <child>
+              <placeholder/>
             </child>
             <child>
               <placeholder/>
@@ -36074,6 +36095,24 @@ options</property>
                             <child>
                               <placeholder/>
                             </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
+                            <child>
+                              <placeholder/>
+                            </child>
                           </widget>
                         </child>
                       </widget>
@@ -37265,6 +37304,18 @@ To differentiate between male and female, use the values 1/0, or m/f, or M/F on 
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="n_columns">4</property>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
                     <child>
                       <placeholder/>
                     </child>
@@ -39163,9 +39214,6 @@ To differentiate between male and female, use the values 1/0, or m/f, or M/F on 
                                       <placeholder/>
                                     </child>
                                     <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
                                       <widget class="GtkLabel" id="label218">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
@@ -39536,6 +39584,9 @@ To differentiate between male and female, use the values 1/0, or m/f, or M/F on 
                                         <property name="left_attach">2</property>
                                         <property name="right_attach">3</property>
                                       </packing>
+                                    </child>
+                                    <child>
+                                      <placeholder/>
                                     </child>
                                     <child>
                                       <placeholder/>
@@ -43836,6 +43887,9 @@ It starts before and arrives there with some speed.</property>
                         <child>
                           <placeholder/>
                         </child>
+                        <child>
+                          <placeholder/>
+                        </child>
                       </widget>
                       <packing>
                         <property name="left_attach">2</property>
@@ -43862,6 +43916,9 @@ It starts before and arrives there with some speed.</property>
                         <property name="x_options">GTK_FILL</property>
                         <property name="y_options"/>
                       </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
                     </child>
                     <child>
                       <placeholder/>
@@ -44510,6 +44567,9 @@ It starts before and arrives there with some speed.</property>
                         <property name="x_options">GTK_FILL</property>
                         <property name="y_options">GTK_FILL</property>
                       </packing>
+                    </child>
+                    <child>
+                      <placeholder/>
                     </child>
                     <child>
                       <placeholder/>
